--- a/style.scss
+++ b/style.scss
@@ -122,38 +122,38 @@ body {
 
 #menu {
     width: 25%;
-#home {
-    height: 100%;
-        .images {
-            width: 513px;
-            height: 155px;
-            position: relative;
-            right: 165px;
 
-            img {
-                position: relative;
-                top: 40px;
-                left: calc((100% / 2) - 75px);
-                width: 150px;
-                height: 150px;
+    #home {
+        height: 100%;
+
+        .images {
+            position: absolute;
+            width: 25%;
+            height: 20%;
+            top: 7%;
+            #logo {
+                position: absolute;
+                top: 30%;
+                left: 33%;
+                width: 30%;
+                -webkit-clip-path: circle();
                 clip-path: circle();
-                //box-shadow: 0px 15px 50px -5px rgba(0,0,0,0.4);
+                z-index: 1;
             }
         }
 
         nav {
-            position: relative;
-            width: 200px;
-            top: calc((100% / 2) - 280px);
-            left: 50px;
+            position: absolute;
+            width: 10%;
+            top: 30%;
+            left: 5%;
             z-index: 5;
 
             ul {
-                margin-left: 40px;
-
                 li {
                     margin: 30px auto;
                     list-style-type: none;
+                    display: inline-block;
 
                     a {
                         font-family: 'Nanum Gothic', sans-serif;
@@ -181,52 +181,53 @@ body {
     float: right;
     position: absolute;
     right: 0;
+
+    .gallery-item {
+        position: relative;
+        flex: 1 0 25%;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .gallery-item:hover .gallery-item-info,
+    .gallery-item:focus .gallery-item-info {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .gallery-item-info {
+        display: none;
+    }
+
+    .gallery-item-info li {
+        display: inline-block;
+        font-size: 1.7rem;
+        font-weight: 600;
+        font-family: Nanum Gothic;
+    }
+
+    .gallery-item-type {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        font-size: 2.5rem;
+        text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+    }
+
+
+    .gallery-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
-.gallery-item {
-    position: relative;
-    flex: 1 0 25%;
-    color: #fff;
-    cursor: pointer;
-}
-
-.gallery-item:hover .gallery-item-info,
-.gallery-item:focus .gallery-item-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.gallery-item-info {
-    display: none;
-}
-
-.gallery-item-info li {
-    display: inline-block;
-    font-size: 1.7rem;
-    font-weight: 600;
-    font-family: Nanum Gothic;
-}
-
-.gallery-item-type {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2.5rem;
-    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
-}
-
-
-.gallery-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
 #infoModal {
     .content {
